# edge

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  shell.nix  smart_band.db
alerting/: __init__.py
alerting/application/: __init__.py  kafka_alert_incident_consumer.py
alerting/domain/: __init__.py
alerting/infrastructure/: __init__.py  alert_incident_event_repository.py  models.py
alerting/interfaces/: __init__.py  api.py
device/: __init__.py
device/application/: __init__.py  command_sync_processor.py  kafka_command_consumer.py  outbox_processor.py  services.py
device/domain/: __init__.py  entities.py  outbox_entry.py  services.py
device/infrastructure/: __init__.py  models.py  repositories.py
device/interfaces/: __init__.py  api.py
docs/class-diagrams/: alerting_class_diagram.md  device_class_diagram.md  iam_class_diagram.md  provisioning_class_diagram.md
docs/context-mapping/: context-mapping.md
docs/user-stories/: device-technical-stories.md  iam-technical-stories.md  provisioning-technical-stories.md  technical_stories_unified.md
iam/: __init__.py
iam/application/: __init__.py  device_presence_monitor.py  services.py
iam/domain/: __init__.py  entities.py  services.py
iam/infrastructure/: __init__.py  models.py  repositories.py
iam/interfaces/: __init__.py  services.py
provisioning/: __init__.py
provisioning/application/: __init__.py  kafka_provisioning_consumer.py
provisioning/domain/: __init__.py
provisioning/infrastructure/: __init__.py  device_cache_repository.py
shared/: __init__.py
(+79 files in other folders)
