[project]
name = "edge-service"
version = "0.1.0"
description = "IoT edge service for smart band health telemetry ingestion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "kafka-python>=2.3.1",
    "peewee>=4.0.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
]
